# gnss

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  ROADMAP.md  TODO.md  constellations.json  last_omm_fetch_time.json  pyproject.toml  requirements.txt
docs/: README.md  architecture.md
docs/scripts/: active.md  filter.md  ids.md  location.md  log.md  match.md  parquet.md  stats.md  tle.md  upload.md  utils.md  verify.md
ids/: beidou.json  galileo.json  glonass.json  navstar.json  qzs.json  sbas.json
ids/active/: beidou.json  galileo.json  glonass.json  navstar.json  qzs.json  sbas.json
kaggle/: dataset-metadata.json  gnss.csv
logs/: .gitignore  matched.csv  verified.csv
logs/filtered/: gnss_log_2025_03_01_11_04_17.txt  gnss_log_2025_03_02_16_26_41.txt  (+18 more)
matches/: gnss.csv  matches.csv
scripts/: active.py  filter.py  ids.py  location.py  log.py  match.py  parquet.py  stats.py  tle.py  upload.py  utils.py  verify.py
tests/: test_active.py  test_filter.py  test_ids.py  test_match.py  test_tle.py  test_upload.py  test_utils.py  test_verify.py
tles/: .gitignore  36287.json  36400.json  36401.json  36402.json  36585.json  36590.json  36828.json  37137.json  37138.json  37139.json  37158.json  37210.json  37256.json  37372.json  37384.json  37753.json  37763.json  37829.json  37846.json  37847.json  37867.json  37868.json  37869.json  37938.json  37948.json  38091.json  38250.json  38251.json  38774.json  38775.json  38833.json  38857.json  38858.json  38953.json  39155.json  39166.json  39533.json  39620.json  39741.json  (+109 more)
