[project]
name = "gnss"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "ipykernel",
    "requests",
    "ratelimit",
    "dotenv",
    "gdown",
    "skyfield",
    "scipy",
    "kaggle",
    "fastdtw",
    "pyarrow",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "mypy>=2.3.0",
    "pandas-stubs>=3.0.3.260530",
    "scipy-stubs>=1.18.0.1",
]

[tool.uv]
package = false


[tool.ruff]
line-length = 99
target-version = "py311"


[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RET", "S"]
ignore = ["E501", "B008", "S101"]


[tool.ruff.format]
quote-style = "double"


[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "skyfield.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastdtw.*"
ignore_missing_imports = true
